Crawler optimized. Error pages to be added.
Signed-off-by: Violet Siegius <fvcproductions@icloud.com>

--- a/browser/js/admin/directives/products/admin-products.html
+++ b/browser/js/admin/directives/products/admin-products.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row marginTopBottom">
         <md-input-container flex>
-            <label>Bootcamp Title</label>
+            <label><p>Bootcamp Title</p></label>
             <input ng-model="newProduct.title" />
         </md-input-container>
     </div>
@@ -14,31 +14,31 @@
         <div class="col-md-6">
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>AngelList URL</label>
+                    <label><p>i.e. http://angel.co/bootcamp</p></label>
                     <input ng-model="newProduct.angelList.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Course Report URL</label>
+                    <label><p>i.e. http://www.coursereport.com/schools/bootcamp</p></label>
                     <input ng-model="newProduct.courseReport.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Facebook URL</label>
+                    <label><p>i.e. http://www.facebook.com/bootcamp</p></label>
                     <input ng-model="newProduct.facebook.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Google+ URL</label>
+                    <label><p>i.e. http://www.plus.google.com/bootcamp/about</p></label>
                     <input ng-model="newProduct.googlePlus.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>LinkedIn URL</label>
+                    <label><p>i.e. http://www.linkedin.com/company/bootcamp</p></label>
                     <input ng-model="newProduct.linkedin.url" />
                 </md-input-container>
             </div>
@@ -46,31 +46,31 @@
         <div class="col-md-6">
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Quora URL</label>
+                    <label><p>i.e. http://www.quora.com/bootcamp</p></label>
                     <input ng-model="newProduct.quora.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Switchup URL</label>
+                    <label><p>i.e. http://www.facebook.com/bootcamp</p></label>
                     <input ng-model="newProduct.switchup.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Techendo URL</label>
+                    <label><p>i.e. http://schools.techendo.com/schools/bootcamp</p></label>
                     <input ng-model="newProduct.techendo.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Twitter URL</label>
+                    <label><p>i.e. http://www.twitter.com/bootcamp</p></label>
                     <input ng-model="newProduct.twitter.url" />
                 </md-input-container>
             </div>
             <div class="row marginTopBottom">
                 <md-input-container flex>
-                    <label>Yelp URL</label>
+                    <label><p>i.e. http://www.yelp.com/biz/bootcamp</p></label>
                     <input ng-model="newProduct.yelp.url" />
                 </md-input-container>
             </div>
